[package]
name = "jrest"
description = "The equivalent of Jest for Rust."
license = "MIT"
version = "0.0.0"

edition = "2021"
rust-version = "1.70.0"

authors = ["Ivan Gabriele <ivan.gabriele@gmail.com>"]
categories = ["development-tools::testing"]
homepage = "https://github.com/ivangabriele/rest"
readme = "README.md"
repository = "https://github.com/ivangabriele/rest"

[dependencies]
num = "0.4.0"
