[package]
name = "cargo-jrest"
description = "Jrest Cargo command."
license = "MIT"
version = "0.2.3"

edition = "2021"
rust-version = "1.70.0"

authors = ["Ivan Gabriele <ivan.gabriele@gmail.com>"]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
homepage = "https://github.com/ivangabriele/jrest#readme"
readme = "README.md"
repository = "https://github.com/ivangabriele/jrest"

include = ["src/**/*.rs", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.34.0", features = ["process", "full"] }
serde_json = "1.0.100"

[dev-dependencies]
