[package]
name = "jrest"
description = "The equivalent of Jest for Rust."
license = "MIT"
version = "0.2.1"

edition = "2021"
rust-version = "1.70.0"

authors = ["Ivan Gabriele <ivan.gabriele@gmail.com>"]
categories = ["development-tools::testing"]
homepage = "https://github.com/ivangabriele/jrest#readme"
readme = "README.md"
repository = "https://github.com/ivangabriele/jrest"

include = ["src/**/*.rs", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
num = "0.4.0"
jrest_hooks = { version = "=0.2.1", optional = true, path = "../jrest_hooks" }

[dev-dependencies]
