[package]
name = "jrest_hooks"
description = "Jrest `after()`, `after_each()`, `before()`, `before_each()` and `skip()` hooks."
license = "MIT"
version = "0.2.2"

edition = "2021"
rust-version = "1.70.0"

authors = ["Ivan Gabriele <ivan.gabriele@gmail.com>", "Tom Pridham <pridham.tom@gmail.com>"]
categories = ["development-tools::testing"]
homepage = "https://github.com/ivangabriele/jrest#readme"
readme = "README.md"
repository = "https://github.com/ivangabriele/jrest"

include = ["src/**/*.rs", "CHANGELOG.md", "LICENSE", "README.md"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.23", features = ["extra-traits", "fold", "full"] }

[dev-dependencies]
